# jsonrpc-fdpass

./: Cargo.toml  README.md
.github/workflows/: build.yml
docs/: related.md
examples/: demo.rs  skopeo-proxy-object-dedup.md  skopeo-proxy-proposed-new.md  skopeo-proxy-write-extension.md
src/: client.rs  error.rs  lib.rs  main.rs  message.rs  server.rs  transport.rs
tests/: integration_tests.rs  jsonrpsee_interop.rs  skopeo_integration.rs
