[package]
name = "jsonrpc-fdpass"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC 2.0 with Unix file descriptor passing"
authors = ["Colin Walters <walters@verbum.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgwalters/spec-json-rpc-fdpass"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustix = { version = "0.38", features = ["net"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonrpsee = { version = "0.24", features = ["server", "client-core"], default-features = false }

[dev-dependencies]
tempfile = "3.0"
